# Ascend

./: .gitignore  README.md  config.sample.yaml  index.html  pyproject.toml  task.md
.kin/: config
.pact/: audit.jsonl  state.json
.pact/test-gen/: analysis.json  security_audit.md
contracts/contracts_contracts_src_ascend_audit_interface_interface/: interface.py
contracts/contracts_contracts_src_ascend_cli_interface_interface/: interface.py
contracts/contracts_contracts_src_ascend_config_interface_interface/: interface.py
contracts/contracts_contracts_src_ascend_db_interface_interface/: interface.py
contracts/contracts_contracts_src_ascend_output_interface_interface/: interface.json  interface.py
contracts/contracts_contracts_src_ascend_scheduler_interface_interface/: interface.py
contracts/contracts_contracts_src_ascend_summarizer_interface_interface/: interface.json  interface.py
contracts/contracts_src_ascend_audit_interface/: interface.py
contracts/contracts_src_ascend_cli_interface/: interface.py
contracts/contracts_src_ascend_config_interface/: interface.py
contracts/contracts_src_ascend_db_interface/: interface.json  interface.py
contracts/contracts_src_ascend_output_interface/: interface.py
contracts/contracts_src_ascend_scheduler_interface/: interface.json  interface.py
contracts/contracts_src_ascend_summarizer_interface/: interface.json  interface.py
decomposition/: interview.json  tree.json
tests/: test_cli.py  test_config.py  test_db.py  test_integrations.py  test_planning.py  test_reports.py  test_schedule.py  test_tui.py
(+169 files in other folders)
